fixing side gap

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@ p {
 .main-content {
   width: 100%;
   background-color: white;
+  overflow-x: hidden;
 }
 
 .icon-bar {
